# wiki-stream-analytics

./: .dockerignore  .env.sample  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.py
.github/workflows/: dbt-refresh.yaml  dbt.yml  ingestion.yml  k8s.yml  processing.yml  producer.yml  terraform.yml
common/: kafka.py
dbt/: pyproject.toml
dbt/wikistream_analytics/: dbt_project.yml
infra/k8s/: README.md
infra/terraform/: GITHUB_ACTIONS.md  README.md  analytics.tf  api.tf  artifact_registry.tf  bigquery.tf  bootstrap.tf  cert_manager.tf  ci_cd.tf  data_lake.tf  flink_operator.tf  gcs.tf  gke.tf  gke_addons.tf  gke_module.tf  helm.tf  iam.tf  ip.tf  kafka.tf  namespace.tf  network.tf  outputs.tf  providers.tf  pubsub.tf  secrets.tf  service_account.tf  streaming.tf  terraform.tfvars.sample  variables.tf
ingestion/: Dockerfile.dataflow  Dockerfile.local  app.py  cloudbuild.yaml  dataflow.py  settings.py
ingestion/dataflow/: metadata.json
ingestion/pipeline/: deduplicate.py  definition.py  load.py  map_fns.py  parse.py  routing.py  stability.py
ingestion/tests/: test_deduplicate.py  test_deduplicate_integration.py  test_definition.py  test_definition_inteegration.py  test_load.py  test_load_integration.py  (+6 more)
processing/: Dockerfile  app.py  cloudbuild.yaml  pipeline.py  settings.py
producer/: .dockerignore  Dockerfile  app.py  cloudbuild.yaml  errors.py  kafka.py  protocols.py  service.py  settings.py  token_provider.py  wiki_client.py
scripts/: bootstrap_terraform_ci_iam.sh  dataflow-deploy.sh  deploy_edge_access.sh
(+126 files in other folders)
